[package]
name = "normalize-css-z"
version = "0.5.1"
edition = "2021"
description = "Normalization of a CSS z-index value to a 32-bit floating-point number (well, kind of...)"
readme = "README.md"
repository = "https://github.com/sjinno/normalize-css-z"
license = "MIT OR Apache-2.0"
keywords = ["css", "z-index", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
custom = []
